Fix project: added films to db.json and updated JS and HTML

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <main class="container">
     <aside>
       <h3>Movies</h3>
-      <ul id="films">
-        <!-- JS will populate -->
-      </ul>
+      <ul id="films"></ul>
     </aside>
 
     <section id="film-detail">
